# massedit

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.txt  LICENSE  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.rst  README.txt  coverage.xml  gmock_test.cpp  massedit.bat  massedit.py  pyproject.toml  setup.cfg  setup.py  tests.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: coverage.yml  python-app.yml  python-publish.yml
