[project]
name = "massedit"
description = "Edit multiple files using Python text processing modules"
version = "0.70.0"
authors = [{name = "elmotec", email = "elmotec@gmx.com"}]
license = {text = "MIT"}
keywords = [
     "sed",
     "editor",
     "stream",
     "python",
     "edit",
     "mass"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
urls = {Homepage = "http://github.com/elmotec/massedit"}
requires-python = ">=3.5"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.scripts]
massedit='massedit:main'


[tool.flake8]
exclude = "docs"
max-line-length = "119"

[tool.isort]
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]
