[project]
name = "massedit"
description = "Edit multiple files using Python text processing modules"
version = "0.70.0"
authors = [{name = "elmotec", email = "elmotec@gmx.com"}]
license = {text = "MIT"}
keywords = [
     "sed",
     "editor",
     "stream",
     "python",
     "edit",
     "mass"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
urls = {Homepage = "http://github.com/elmotec/massedit"}
requires-python = ">=2.7"  # not supported before min version in classifier.

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.scripts]
massedit='massedit:main'

[project.optional-dependencies]
test = [
    "flake8",
    "tox",
]

develop = [
    "black",
    "commitizen",
    "flake8",
    "pre-commit",
    "pylint",
    "tox",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py3{7,8,9,10,11}
    isolated_build = True

    [testenv]
    description = Unit tests
    commands = python tests.py
"""
