[bumpversion]
current_version = 0.67.0
commit = False
tag = False

[metadata]
name = massedit
summary = SCM mining utility classes
version = 0.67.0
author = elmotec
author_email = elmotec@gmx.com
description = Edit multiple files using Python text processing modules
license = MIT
keywords = sed editor stream python edit mass
home-page = http://github.com/elmotec/massedit
requires-dist = setuptools
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Text Editors :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Utilities
    Intended Audience :: Developers

[options]
setup_requires = 
    wheel
install_requires = 
    mock;python_version<="3.3"
packages = .
test_suite = tests.py
python_requires = >=2.7

[entry_points]
console_scripts = 
	massedit=massedit:main

[build-system]
requires = 
	setuptools >= 40.9.0
	wheel
build-backend = "setuptools.build_meta"

[bumpversion:file:setup.cfg]
search = version={current_version}
replace = version={new_version}

[bumpversion:file:massedit.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 119

[isort]
profile = black

[tox:tox]
envlist = py27, py36, py37, py38, py39
isolated_build = True

[testenv]
deps = 
	--prefer-binary
	.
	pytest
commands = pytest tests.py

[testenv:docs]
deps = 
	sphinx
	sphinx-autodoc-typehints
	sphinx-rtd-theme
commands = python setup.py build_sphinx

[aliases]
