[metadata]
name = massedit
summary = SCM mining utility classes
# UPDATE massedit.py
version = 0.69.1
author = elmotec
author_email = elmotec@gmx.com
description = Edit multiple files using Python text processing modules
long-description = file: README.rst
long-description-content-type = text/x-rst
license = MIT
keywords = sed editor stream python edit mass
home-page = http://github.com/elmotec/massedit
requires-dist = setuptools
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Text Editors :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Utilities
    Intended Audience :: Developers

[options]
setup_requires = 
    wheel
install_requires = 
    mock
packages = .
test_suite = tests
python_requires = >=3.7

[entry_points]
console_scripts = 
    massedit=massedit:main

[build-system]
requires = 
    setuptools >= 40.9.0
    wheel
build-backend = "setuptools.build_meta"

[bumpversion:file:setup.cfg]
search = version={current_version}
replace = version={new_version}

[bumpversion:file:massedit.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[tox:tox]
envlist = py3{7,8,9,10,11}
isolated_build = True

[testenv]
description = Unit tests
commands = python tests.py
